# legal-rag

./: .env.example  .gitignore  .mise.toml  Dockerfile  README.md  config.ini  docker-compose.yaml  pyproject.toml
scripts/: docker_pull_ollama_models.sh  pull_ollama_models.sh  run.sh  test.py
src/: supreme_court.py
src/docs/: extract_scotus.py  models.py  process_pdfs.py
src/rag/: embed.py  kg.py  main.py  models.py  query_param.py
tests/integ/: test_embed.py  test_integ_folio.py  test_integ_kg.py  test_integ_supreme_court.py  test_main.py  test_rag.py  test_supreme_court.py
tests/unit/: test_extract_scotus.py  test_folio.py  test_models.py  test_process_pdfs.py  test_rag.py
